Fix: fixing and adding new songs

--- a/player.html
+++ b/player.html
@@ -19,15 +19,15 @@
 
         <div class="box">
      
-         <button class="btn" onclick="window.location.href='song1.html'"> Quando quiser sorrir </button> 
-         <button class="btn" onclick="window.location.href='song2.html'"> Quando não conseguir dormir</button>
-         <button class="btn" onclick="window.location.href='song3.html'"> Quando sentir vontade de sumir</button> 
-         <button class="btn" onclick="window.location.href='song4.html'"> Quando estiver feliz  </button>
-         <button class="btn" onclick="window.location.href='song5.html'">Quando estiver triste</button>
-         <button class="btn" onclick="window.location.href='song6.html'"> Quando pensar em mim </button>
-         <button class="btn" onclick="window.location.href='song7.html'"> Quando sentir um vazio estranho </button>
-         <button class="btn" onclick="window.location.href='song8.html'"> Quando quiser um abraço </button>
-         <button class="btn" onclick="window.location.href='song9.html'"> Quando quiser chorar </button>
+         <button class="btn" onclick="window.location.href='song1.html'"> <_> </button> 
+         <button class="btn" onclick="window.location.href='song2.html'"> >_< </button>
+         <button class="btn" onclick="window.location.href='song3.html'"> <_> </button> 
+         <button class="btn" onclick="window.location.href='song4.html'"> >_< </button>
+         <button class="btn" onclick="window.location.href='song5.html'"> <_> </button>
+         <button class="btn" onclick="window.location.href='song6.html'"> >_< </button>
+         <button class="btn" onclick="window.location.href='song7.html'"> <_> </button>
+         <button class="btn" onclick="window.location.href='song8.html'"> >_< </button>
+         <button class="btn" onclick="window.location.href='song9.html'"> <_> </button>
          
         </div>
     </div>
