--- a/song1.html
+++ b/song1.html
@@ -15,10 +15,10 @@
     Seu navegador não suporta vídeo HTML5.
   </video>
   <div >
-    <img class="album" src="images/capa.jpg" alt="">
+    <img class="album" src="images/song4.jpg" alt="">
   </div>
   <div class="vinil" id="vinil"></div>
-  <div class="music-title"> Arctic Monkeys - Arabella</div>
+  <div class="music-title"> Twin Tribes - Fantasmas</div>
 
   <div class="controls">
     <button id="playBtn"  class="play-icon" onclick="togglePlay()"> ▶</button>
@@ -30,7 +30,7 @@
 </div>
 
 
-  <audio id="audio" src="Songs/Arctic Monkeys - Arabella (Official Audio).mp3"></audio>
+  <audio id="audio" src="Songs/Twin Tribes - Fantasmas.mp3"></audio>
 </div>
 <script src="song1.js"></script>
 </body>
