--- a/song5.html
+++ b/song5.html
@@ -15,10 +15,10 @@
     Seu navegador não suporta vídeo HTML5.
   </video>
   <div >
-    <img class="album" src="https://i.pinimg.com/736x/d9/7c/db/d97cdb7ea3badcd7dc528ae491f9e778.jpg" alt="">
+    <img class="album" src="images/song7.jpg" alt="">
   </div>
   <div class="vinil" id="vinil"></div>
-  <div class="music-title"> Billie Eilish - THE GREATEST</div>
+  <div class="music-title"> PASTEL GHOST - MERCURY </div>
 
   <div class="controls">
     <button id="playBtn"  class="play-icon" onclick="togglePlay()"> ▶</button>
@@ -26,11 +26,11 @@
 
  <div class="progress">
   <div class="progress-bar" id="progress-bar"></div>
-  <div class="progress-dot" id="progress-dot"></div> <!-- ✅ fora da barra -->
+  <div class="progress-dot" id="progress-dot"></div> 
 </div>
 
 
-  <audio id="audio" src="Billie Eilish - THE GREATEST (Official Lyric Video).mp3"></audio>
+  <audio id="audio" src="Songs/PASTEL GHOST ∞ MERCURY.mp3"></audio>
 </div>
 <script src="song1.js"></script>
 </body>
