--- a/song7.html
+++ b/song7.html
@@ -15,10 +15,10 @@
     Seu navegador não suporta vídeo HTML5.
   </video>
   <div >
-    <img class="album" src="https://i.pinimg.com/736x/d9/7c/db/d97cdb7ea3badcd7dc528ae491f9e778.jpg" alt="">
+    <img class="album" src="images/SONG9.jpg" alt="">
   </div>
   <div class="vinil" id="vinil"></div>
-  <div class="music-title"> Billie Eilish - THE GREATEST</div>
+  <div class="music-title"> Korn - Falling Away From Me</div>
 
   <div class="controls">
     <button id="playBtn"  class="play-icon" onclick="togglePlay()"> ▶</button>
@@ -30,7 +30,7 @@
 </div>
 
 
-  <audio id="audio" src="Billie Eilish - THE GREATEST (Official Lyric Video).mp3"></audio>
+  <audio id="audio" src="Songs/Korn - Falling Away From Me.mp3"></audio>
 </div>
 <script src="song1.js"></script>
 </body>
