--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <source src="Vídeo sem título ‐ Feito com o Clipchamp.mp4" type="video/mp4">
     Seu navegador não suporta vídeo HTML5.
   </video>
-          <h1>Para o dono das noites</h1>
+          <h1>Para o dono das noites <br> The Batman</h1>
     <p>
       Guardei músicas que quero que ce escute<br>
-      quando o silêncio bater ou a saudade chamar...<br>
-      Cada uma tem um motivo. Clica pra descobrir <span class="rose">🌹</span>
+      quando sla ce não tiver legal ou afins...<br>
+      Cada uma tem um motivo, sempre tem um motivo <br> <span class="rose"> Espero que ce goste🌹</span>
     </p></div>
          <button class="btn" onclick="window.location.href='player.html'"> Clica aqui </button>
         </div>
