--- a/song2.html
+++ b/song2.html
@@ -6,6 +6,7 @@
     <title>music</title>
     <link rel="stylesheet" href="song1.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 <body>
@@ -21,12 +22,14 @@
   <div class="music-title"> Cristasl Castles - Untrust Us</div>
 
   <div class="controls">
-    <button id="playBtn"  class="play-icon" onclick="togglePlay()"> ▶</button>
+<button id="playBtn" class="play-icon" onclick="togglePlay()">
+  <i class="fas fa-play"></i>
+</button>
   </div>
 
  <div class="progress">
   <div class="progress-bar" id="progress-bar"></div>
-  <div class="progress-dot" id="progress-dot"></div> <!-- ✅ fora da barra -->
+  <div class="progress-dot" id="progress-dot"></div> 
 </div>
 
 
