--- a/song7.html
+++ b/song7.html
@@ -6,6 +6,7 @@
     <title>music</title>
     <link rel="stylesheet" href="song1.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 <body>
@@ -21,7 +22,8 @@
   <div class="music-title"> Korn - Falling Away From Me</div>
 
   <div class="controls">
-    <button id="playBtn"  class="play-icon" onclick="togglePlay()"> ▶</button>
+<button id="playBtn" class="play-icon" onclick="togglePlay()">
+  <i class="fas fa-play"></i>
   </div>
 
  <div class="progress">
